<resources>
    <string name="app_name">SmileGate_Assignment</string>
    <string name="main_app_bar_title">STOVE DEV CAMP</string>
    <string name="post_detail_edit">수정</string>
    <string name="post_detail_delete">삭제</string>
    <string name="date_format">yyyy.MM.dd H:m</string>
    <string name="post_detail_write_comment">COMMENT</string>
    <string name="post_detail_delete_dialog_title">글을 삭제하시겠어요?</string>
    <string name="post_detail_delete_dialog_description">삭제된 글은 복구할 수 없어요!</string>
    <string name="post_detail_delete_dialog_accept">예</string>
    <string name="diary_detail_delete_dialog_cancel">아니오</string>
    <string name="main_write_new_post">새 포스트 작성하기</string>
    <string name="new_post_write_new_post">등록</string>
    <string name="new_post_title">제목</string>
    <string name="new_post_content">여기에 내용을 입력하세요</string>
    <string name="new_post_impossible_dialog_title">포스팅를 작성할 수 없습니다.</string>
    <string name="new_post_title_impossible_dialog_description">포스팅 제목이 비어있습니다.</string>
    <string name="new_post_impossible_dialog_accept">확인</string>
    <string name="new_post_content_impossible_dialog_description">포스팅 본문이 비어있습니다.</string>
    <string name="comment_delete_dialog_title">댓글 삭제</string>
    <string name="write_comment_description">댓글을 입력해주세요.</string>
    <string name="write_comment_button">등록</string>
    <string name="dialog_delete_auth_check_title">비밀번호 입력</string>
    <string name="dialog_delete_auth_check_password">비밀번호</string>
    <string name="dialog_delete_auth_check_password_confirm">비밀번호 확인</string>
    <string name="dialog_delete_auth_check_need_password">비밀번호를 입력해주세요.</string>
    <string name="dialog_delete_auth_check_need_password_again">비밀번호를 한번 더 입력해주세요.</string>
    <string name="dialog_delete_auth_check_check_password">확인</string>
    <string name="comment_empty_sign">댓글이 없습니다.\n첫번째 댓글을 남겨주세요.</string>
    <string name="comment_write_comment_button">등록</string>
    <string name="comment_comment_content">댓글 내용</string>
    <string name="comment_password">최대 10글자 비밀번호</string>
    <string name="comment_nickname">최대 10글자 닉네임</string>
    <string name="dialog_delete_auth_check_wrong_password">비밀번호가 올바르지 않습니다.</string>
    <string name="delete_auth_check_dialog_title">정말로 삭제하시겠습니까?</string>
    <string name="delete_auth_check_dialog_descriptionㅅ">삭제 후에는 복구가 불가능합니다.</string>
    <string name="delete_auth_check_dialog_accept">예</string>
    <string name="delete_auth_check_dialog_cancelㅇㅏ">아니오</string>
    <string name="delete_auth_check_dialog_cancel">아니오</string>
    <string name="delete_auth_check_dialog_description">삭제 후에는 복구가 불가능합니다.</string>
</resources>