<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.smilegate.assignment.ui.comment.CommentDeleteAuthCheckViewModel" />

        <import type="android.view.View" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ImageButton
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:paddingStart="16dp"
            android:paddingTop="26dp"
            android:paddingEnd="26dp"
            android:paddingBottom="26dp"
            android:src="@drawable/btn_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/darkGrey" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:lineSpacingExtra="7sp"
            android:text="@string/dialog_delete_auth_check_title"
            android:textAlignment="center"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cancel" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="52dp"
            android:layout_marginTop="52dp"
            android:ems="10"
            android:hint="@string/dialog_delete_auth_check_password"
            android:inputType="textPassword"
            android:lineSpacingExtra="6sp"
            android:maxLines="1"
            android:paddingVertical="20dp"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title"
            app:layout_constraintVertical_bias="0.083" />

        <TextView
            android:id="@+id/need_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/dialog_delete_auth_check_need_password"
            android:visibility="@{viewModel.needPasswordMessage ? View.VISIBLE : View.INVISIBLE}"
            app:layout_constraintEnd_toEndOf="@id/password"
            app:layout_constraintStart_toStartOf="@id/password"
            app:layout_constraintTop_toBottomOf="@id/password" />

        <TextView
            android:id="@+id/wrong_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/dialog_delete_auth_check_wrong_password"
            android:visibility="@{viewModel.wrongPasswordMessage ? View.VISIBLE : View.INVISIBLE}"
            app:layout_constraintEnd_toEndOf="@id/password"
            app:layout_constraintStart_toStartOf="@id/password"
            app:layout_constraintTop_toBottomOf="@id/password" />


        <Button
            android:id="@+id/check_password"
            style="@style/Widget.Blog.BottomButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="52dp"
            android:layout_marginTop="28dp"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:lineSpacingExtra="6sp"
            android:text="@string/dialog_delete_auth_check_check_password"
            android:textColor="#ffffff"
            android:textSize="18dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/need_password"
            app:layout_goneMarginTop="28dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>