<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.smilegate.assignment.ui.comment.CommentViewModel" />

        <import type="android.view.View" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:id="@+id/scroll_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <com.google.android.material.appbar.AppBarLayout
                    android:id="@+id/appbar_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.appbar.MaterialToolbar
                        android:id="@+id/toolbar"
                        style="@style/Widget.MaterialComponents.Toolbar.Surface"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:navigationIcon="@drawable/btn_cancel"
                        app:navigationIconTint="@color/darkGrey"
                        app:title="@{viewModel.postTitle}" />
                </com.google.android.material.appbar.AppBarLayout>


                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/comments"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    app:layout_constraintBottom_toTopOf="@id/comment_input_window"
                    app:layout_constraintTop_toBottomOf="@id/appbar_layout"
                    tools:itemCount="20"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:listitem="@layout/item_comment" />

                <TextView
                    android:id="@+id/empty_sign"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/comment_empty_sign"
                    android:visibility="@{viewModel.isCommentEmpty ? View.VISIBLE : View.GONE}"
                    app:layout_constraintBottom_toBottomOf="@id/comments"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/comments" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/comment_input_window"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent">

                    <EditText
                        android:id="@+id/nickname"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/comment_nickname"
                        android:maxLength="10"
                        app:layout_constraintBottom_toTopOf="@id/comment_content"
                        app:layout_constraintEnd_toStartOf="@id/password"
                        app:layout_constraintStart_toStartOf="parent" />

                    <EditText
                        android:id="@+id/password"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/comment_password"
                        android:maxLength="10"
                        app:layout_constraintBottom_toBottomOf="@id/nickname"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/nickname" />


                    <EditText
                        android:id="@+id/comment_content"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/comment_comment_content"
                        app:layout_constraintBottom_toTopOf="@id/write_comment_button"
                        app:layout_constraintHeight_max="250dp" />


                    <Button
                        android:id="@+id/write_comment_button"
                        style="@style/Widget.Blog.BottomButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingEnd="30dp"
                        android:text="@string/comment_write_comment_button"
                        android:textColor="@color/darkGrey"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>