<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:fitsSystemWindows="true">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.smilegate.assignment.ui.newpost.NewPostViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.write_diary.WriteDiaryContentActivity">

        <ImageButton
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:paddingHorizontal="17dp"
            android:paddingTop="16dp"
            android:paddingBottom="14dp"
            android:src="@drawable/btn_cancel"
            app:tint="@color/darkGrey"
            app:layout_constraintTop_toTopOf="@id/write_new_post"
            app:layout_constraintBottom_toBottomOf="@id/write_new_post"
            app:layout_constraintStart_toStartOf="parent"/>


        <Button
            android:id="@+id/write_new_post"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:paddingHorizontal="17dp"
            android:paddingTop="10dp"
            android:paddingBottom="14dp"
            android:text="@string/new_post_write_new_post"
            android:textColor="@color/darkGrey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/banner"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:src="@drawable/smile_gate_logo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.2"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <EditText
            android:id="@+id/title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/new_post_title"
            android:inputType="text"
            android:text="@={viewModel.title}"
            app:layout_constraintEnd_toEndOf="@id/guideline_right"
            app:layout_constraintStart_toStartOf="@id/guideline_left"
            app:layout_constraintTop_toBottomOf="@id/banner" />

        <EditText
            android:id="@+id/content"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="24dp"
            android:foregroundGravity="top"
            android:gravity="top"
            android:hint="@string/new_post_content"
            android:inputType="textMultiLine"
            android:lines="20"
            android:maxLength="1000"
            android:text="@={viewModel.content}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/title"
            app:layout_constraintStart_toStartOf="@id/title"
            app:layout_constraintTop_toBottomOf="@id/title" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="20dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="20dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>